<resources>
    <string name="app_name">chat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be &gt; 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btnToLogin">Iniciar Sesion</string>
    <string name="btnToRegister">Registrar</string>
    <string name="txtLogin">Inicio de Sesion\n\n</string>
    <string name="correoHInt">Correo: a@something.com</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtTitleRegistrar">Crear Cuenta</string>
    <string name="hintInputNombre">Nombre Completo\n</string>
    <string name="hintInputCorreo">Correo electrónico\n</string>
    <string name="hintInputConfirmPassword">Confirmar contraseña</string>
    <string name="btnRegisterMe">Registrarme</string>
    <string name="btnBackToLoginText">Ya tengo cuenta, Iniciar sesión</string>
    <string name="btnLogout">Cerrar Sesión</string>
    <string name="txtNewChat">Nuevo Chat</string>
    <string name="titleChats">Lista De Conversaciones</string>
    <string name="titleContactos">Contactos</string>
    <string name="statusOnline">Online</string>
    <string name="statusOffline">Offline</string>
    <string name="txtOnlineStatus">Status</string>
    <string name="txtUserName">Nombre de usuario</string>
    <string name="txtEmail">email@domain.com</string>
    <string name="txtPassActual">Contraseña Actual</string>
    <string name="txtPassNew">Nueva Contraseña</string>
    <string name="txtRepPassNew">Repetir Nueva Contraseña</string>
    <string name="txtSaveChanges">Guardar Cambios</string>
    <string name="imgUserProfile" />
    <string name="txtNameRecv">Enviado por...</string>
    <string name="msgEliminado">Este mensaje fue eliminado</string>
    <string name="msgEditado">editado</string>
    <string name="btnSend">Enviar mensaje</string>
    <string name="btnCamera">Enviar imagen</string>
    <string name="hintmtLnMessage">Escribe un mensaje...</string>
</resources>