<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <!-- 1. Título (Inicia la cadena empaquetada) -->
    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtLogin"
        android:textSize="34sp"
        android:textAlignment="center"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 2. Imagen -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/primary"
        android:backgroundTint="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/inputCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <!-- 3. Campo Correo -->
    <EditText
        android:id="@+id/inputCorreo"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@color/bgInputs"
        android:backgroundTint="@color/bgInputs"
        android:ems="10"
        android:hint="@string/correoHInt"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColorInputs"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!-- 4. Campo Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/btnFormLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCorreo">

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/bgInputs"
            android:backgroundTint="@color/bgInputs"
            android:ems="10"
            android:hint="@string/txtPassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/hintColorInputs"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- 5. Botón de Login -->
    <Button
        android:id="@+id/btnFormLogin"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primary"
        android:text="@string/txtLogin"
        android:textColorLink="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/btnFormToRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPass" />

    <!-- 6. Botón ir a Registro (Termina la cadena) -->
    <Button
        android:id="@+id/btnFormToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/btnToRegister"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFormLogin" />
    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:elevation="5dp"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnFormLogin"
        app:layout_constraintEnd_toEndOf="@+id/btnFormLogin"
        app:layout_constraintStart_toStartOf="@+id/btnFormLogin"
        app:layout_constraintTop_toTopOf="@+id/btnFormLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>